# line-history-py

./: .gitignore  Cargo.toml  README.md  line_history.py  line_history.pyi  pyproject.toml
examples/: basic.py  basic.txt  example.py  history.txt
src/: lib.rs
src/line_history/: __init__.py  history.py  parse.py
