[package]
name = "line-history-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "line_history_py"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
line-history = { git = "https://github.com/TyomoGit/line-history-rs.git", version = "0.6.0" }
pyo3 = { version = "0.21.1", features = ["chrono"] }
