[project]
name = "line_history"
version = "0.2.0"
description = "LINE history parser"
readme = "README.md"
authors = [
    { name = "pullriku", email = "riku3dno.1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
